Versao Netlify atualizada

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,22 @@
 [build]
-functions = "functions"
-publish = "."
+  functions = "functions"
+  publish = "."
+
+[dev]
+  functions = "functions"
+  publish = "."
+  port = 8888
 
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[functions]
+  node_bundler = "esbuild"
+
+[functions.getMovies]
+  included_files = [".env"]
+
+[functions.getMovie]
+  included_files = [".env"]
