--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection String
-MONGODB_URI =mongodb+srv://ruvensix:Regf32porto@cluster0.kpyq5wo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI =mongodb+srv://ruvensix:Regf32porto@Cluster0.kpyq5wo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # Database Names
 MONGODB_DB_NAME=sample_mflix
