--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection String
-MONGODB_URI=mongodb+srv://ruvensix:Regf32porto@Cluster0.kpyq5wo.mongodb.net/
+MONGODB_URI=mongodb+srv://ruvensix:Regf32porto@Cluster0.mongodb.net/
 # Database Names
 MONGODB_DB_NAME=sample_mflix
 MONGODB_COLLECTION_NAME=movies
