--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # MongoDB Connection String
-MONGODB_URI=mongodb+srv://ruvensix:Regf32porto@Cluster0.mongodb.net/
+MONGODB_URI=mongodb+srv://ruvensix:230500@cluster0.kpyq5wo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # Database Names
 MONGODB_DB_NAME=sample_mflix
 MONGODB_COLLECTION_NAME=movies
 MONGODB_COMMENTS_COLLECTION=comments
+
